--- a/main.css
+++ b/main.css
@@ -15,4 +15,26 @@ table, th, td {
     margin-right: auto;
   }
 
+  /* Below is the <hr class="rounded"> CSS
+  /* Dashed border */
+hr.dashed {
+    border-top: 3px dashed #bbb;
+  }
+  
+  /* Dotted border */
+  hr.dotted {
+    border-top: 3px dotted #bbb;
+  }
+  
+  /* Solid border */
+  hr.solid {
+    border-top: 3px solid #bbb;
+  }
+  
+  /* Rounded border */
+  hr.rounded {
+    border-top: 8px solid #bbb;
+    border-radius: 5px;
+  }
+
   
